--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,8 @@
 server.port = 9000
 #H2
-# -Habilitará o acesso ao console do banco de dados
-spring.h2.console.enabled=true 
-# -URL na qual o console será habilitado
-spring.h2.console.path=/h2
-#Datasource
-# -URL de acesso ao banco
-spring.datasource.url=jdbc:h2:file:~/h2db
-# -Usuário de acesso
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-# -Senha de acesso
-spring.datasource.password=
-# -Driver utilizado para conexão
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
